--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Anthony Goldsworthy</title>
 </head>
 <body>
-    <div class="header">Hello</div>
+    <div class="header">Is This Thing On?</div>
 </body>
 </html>
