--- a/index.html
+++ b/index.html
@@ -4,9 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
     <title>Anthony Goldsworthy</title>
 </head>
 <body>
-    <div class="header">Is This Thing On?</div>
+    <div class="header">
+        <div class="headerLogo"></div>
+        <div class="headerNav">
+            <a class="Nav1" id="navItem">about</a>
+            <div class="navSlash">/</div>
+            <a class="Nav2" id="navItem">contact</a>
+            <div class="navSlash">/</div>
+            <a class="Nav1" id="navItem">notes</a>
+        </div>
+    </div>
+    <div class="section1Cont">
+        <div class="section1">
+            <div class="section1Head">anthony goldsworthy</div>
+        </div>
+    </div>
+    <div class="section2Cont">
+        <div class="section2">
+            <div class="section2Head"></div>
+        </div>
+    </div>
+    <div class="section3Cont">
+        <div class="section3">
+            <div class="section3Head"></div>
+        </div>
+    </div>
+    <div class="section4Cont">
+        <div class="section4">
+            <div class="section4Head"></div>
+        </div>
+    </div>
+    <div class="section5Cont">
+        <div class="section5">
+            <div class="section5Head"></div>
+        </div>
+    </div>
 </body>
 </html>
