Home Page Updates

--- a/index.html
+++ b/index.html
@@ -21,29 +21,9 @@
         </div>
     </div>
     <div class="section1Cont">
-        <div class="section1">
-            <div class="section1Head">anthony goldsworthy</div>
-        </div>
+        <div class="section1"></div>
     </div>
-    <div class="section2Cont">
-        <div class="section2">
-            <div class="section2Head"></div>
-        </div>
-    </div>
-    <div class="section3Cont">
-        <div class="section3">
-            <div class="section3Head"></div>
-        </div>
-    </div>
-    <div class="section4Cont">
-        <div class="section4">
-            <div class="section4Head"></div>
-        </div>
-    </div>
-    <div class="section5Cont">
-        <div class="section5">
-            <div class="section5Head"></div>
-        </div>
-    </div>
+    <img src="Assets/AG Spinner.png" class="spinner">
+    <img src="Assets/IMG_0173.PNG" class="splash">
 </body>
 </html>
