--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
         <div class="section1"></div>
     </div>
     <img src="Assets/AG Spinner.png" class="spinner">
-    <img src="Assets/IMG_0173.PNG" class="splash">
+    <img src="anthonySplash.png" class="splash">
 </body>
 </html>
