--- a/about.html
+++ b/about.html
@@ -14,14 +14,14 @@
         <div class="navA" id="navA" onclick="changeStyle()"></div>
         <div class="navG" id="navG"></div>
         <div class="navMenuItems" id="menIt">
-            <a class="item" href="https://goldsworthy.io/about.html">ABOUT</a>
+            <a class="item">HOME</a>
             <a class="item">CONTACT</a>
             <a class="item">NOTES</a>
         </div>
     </div>
-    <div class="pageActText" id="page" onclick="changeStyle()">HOME ›</div>
+    <div class="pageActText" id="page" onclick="changeStyle()">ABOUT ›</div>
     <div class="mainBody" id="body">
-        <div class="bodHeader">ANTHONY GOLDSWORTHY</div>
+        <div class="bodHeader">ABOUT - ANTHONY GOLDSWORTHY</div>
         <div class="bodSplash"></div>
     </div>
     <div class="bottomSpacer"></div>
