--- a/contact.html
+++ b/contact.html
@@ -15,13 +15,13 @@
         <div class="navG" id="navG"></div>
         <div class="navMenuItems" id="menIt">
             <a class="item" href="https://goldsworthy.io/about.html">ABOUT</a>
-            <a class="item">CONTACT</a>
+            <a class="item">HOME</a>
             <a class="item">NOTES</a>
         </div>
     </div>
-    <div class="pageActText" id="page" onclick="changeStyle()">HOME ›</div>
+    <div class="pageActText" id="page" onclick="changeStyle()">CONTACT ›</div>
     <div class="mainBody" id="body">
-        <div class="bodHeader">ANTHONY GOLDSWORTHY</div>
+        <div class="bodHeader">CONTACT - ANTHONY GOLDSWORTHY</div>
         <div class="bodSplash"></div>
     </div>
     <div class="bottomSpacer"></div>
