--- a/notes.html
+++ b/notes.html
@@ -16,12 +16,12 @@
         <div class="navMenuItems" id="menIt">
             <a class="item" href="https://goldsworthy.io/about.html">ABOUT</a>
             <a class="item">CONTACT</a>
-            <a class="item">NOTES</a>
+            <a class="item">HOME</a>
         </div>
     </div>
-    <div class="pageActText" id="page" onclick="changeStyle()">HOME ›</div>
+    <div class="pageActText" id="page" onclick="changeStyle()">NOTES ›</div>
     <div class="mainBody" id="body">
-        <div class="bodHeader">ANTHONY GOLDSWORTHY</div>
+        <div class="bodHeader">NOTES - ANTHONY GOLDSWORTHY</div>
         <div class="bodSplash"></div>
     </div>
     <div class="bottomSpacer"></div>
