--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Namdhinggo:wght@400;500;600;700;800&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-<title>anthony goldsworthy</title>
+<title>ANTHONY GOLDSWORTHY</title>
 </head>
 <body>
-    <div id="nav" class="nav">
-        <div class="navA" id="navA" onclick="changeStyle()"></div>
+    <div class="navA" id="navA" onclick="changeStyle()"></div>
         <div class="navG" id="navG"></div>
+    <div id="nav" class="nav">
         <div class="navMenuItems" id="menIt">
             <a class="item" href="https://goldsworthy.io/about.html">ABOUT</a>
-            <a class="item">CONTACT</a>
-            <a class="item">NOTES</a>
+            <a class="item" href="https://goldsworthy.io/contact.html">CONTACT</a>
+            <a class="item" href="https://goldsworthy.io/notes.html">NOTES</a>
         </div>
     </div>
     <div class="pageActText" id="page" onclick="changeStyle()">HOME ›</div>
