--- a/contact.html
+++ b/contact.html
@@ -10,16 +10,20 @@
 <title>CONTACT - ANTHONY GOLDSWORTHY</title>
 </head>
 <body>
-    <div id="nav" class="nav">
-        <div class="navA" id="navA" onclick="changeStyle()"></div>
+    <div class="navA" id="navA" onclick="changeStyle()"></div>
         <div class="navG" id="navG"></div>
+    <div id="nav" class="nav">
         <div class="navMenuItems" id="menIt">
             <a class="item" href="https://goldsworthy.io/about.html">ABOUT</a>
-            <a class="item" href="https://goldsworthy. io/index.html">HOME</a>
-            <a class="item" href="https://goldsworthy. io/notes.html">NOTES</a>
+            <a class="item" href="https://goldsworthy.io/index.html">HOME</a>
+            <a class="item" href="https://goldsworthy.io/notes.html">NOTES</a>
         </div>
     </div>
-    <div class="pageActText" id="page" onclick="changeStyle()">CONTACT ›</div>
+    <div class="pageActText" id="page" onclick="changeStyle()">HOME ›</div>
+    <div class="mainBody" id="body">
+        <div class="bodHeader">ANTHONY GOLDSWORTHY</div>
+        <div class="bodSplash"></div>
+    </div>
     <div class="bottomSpacer"></div>
     <script>
         function changeStyle() {
