--- a/notes.html
+++ b/notes.html
@@ -19,7 +19,7 @@
             <a class="item" href="https://goldsworthy.io/index.html">HOME</a>
         </div>
     </div>
-    <div class="pageActText" id="page" onclick="changeStyle()">HOME ›</div>
+    <div class="pageActText" id="page" onclick="changeStyle()">NOTES ›</div>
     <div class="mainBody" id="body">
         <div class="bodHeader">ANTHONY GOLDSWORTHY</div>
         <div class="bodSplash"></div>
