--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
             <a class="item" href="https://goldsworthy.io/notes.html">NOTES</a>
         </div>
     </div>
-    <div class="pageActText" id="page" onclick="changeStyle()">HOME ›</div>
+    <div class="pageActText" id="page" onclick="changeStyle()">CONTACT ›</div>
     <div class="mainBody" id="body">
         <div class="bodHeader">ANTHONY GOLDSWORTHY</div>
         <div class="bodSplash"></div>
