--- a/contact.html
+++ b/contact.html
@@ -1,47 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Namdhinggo:wght@400;500;600;700;800&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-<title>CONTACT - ANTHONY GOLDSWORTHY</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Namdhinggo:wght@400;500;600;700;800&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+    <title>anthony goldsworthy</title>
 </head>
+
 <body>
-    <div class="navA" id="navA" onclick="changeStyle()"></div>
-        <div class="navG" id="navG"></div>
-    <div id="nav" class="nav">
-        <div class="navMenuItems" id="menIt">
-            <a class="item" href="https://goldsworthy.io/about.html">ABOUT</a>
-            <a class="item" href="https://goldsworthy.io/index.html">HOME</a>
-            <a class="item" href="https://goldsworthy.io/notes.html">NOTES</a>
+
+    <div class="pageTransition" id="pageTransition"></div>
+    <div class="pageTransitionIn" id="pageTransitionIn"></div>
+
+    <div class="nav" id="nav">
+        <div class="navBod">
+            <div class="backArrow" onclick="changeStyle()"></div>
+            <div class="navItems">
+                <div class="item" id="home" onclick="transHome()">
+                    HOME
+                </div>
+                <div class="item" id="about" onclick="transAbout()">
+                    ABOUT
+                </div>
+                <div class="item" id="contact" onclick="transContact()">
+                    • CONTACT
+                </div>
+                <div class="item" id="notes" onclick="transNotes()">
+                    NOTES
+                </div>
+            </div>
+            <img src="Assets/polaroid.png" class="polaroid">
         </div>
     </div>
-    <div class="pageActText" id="page" onclick="changeStyle()">CONTACT ›</div>
-    <div class="mainBody" id="body">
-        <div class="bodHeader">ANTHONY GOLDSWORTHY</div>
-        <div class="bodSplash"></div>
-    </div>
-    <div class="bottomSpacer"></div>
-    <script>
-        function changeStyle() {
-            var nav = document.getElementById('nav');
-            var navA = document.getElementById('navA');
-            var navG = document.getElementById('navG');
-            var page = document.getElementById('page');
-            var body = document.getElementById('body');
-            var menIt = document.getElementById('menIt');
+    <div class="bodCont">
+        <div id="bod" class="bod">
+            <div class="NavIndicator" onclick="changeStyle()"></div>
+            <div class="letterMark"></div>
+            <div class="body">
+                <div class="number" id="contactInfo">262.455.8125</div>
+                <div class="email" id="contactInfo">ant@goldsworthy.io</div>
+                <div class="splashContact">contact</div>
+                <div class="stella"></div>
+                <div class="stellaShadow"></div>
+            </div>
+        </div>
+        <script>
+            function changeStyle() {
+                var nav = document.getElementById('nav');
+                var bod = document.getElementById('bod');
 
-        
-            nav.classList.toggle('navAct');
-            navA.classList.toggle('aAct');
-            navG.classList.toggle('gAct');
-            page.classList.toggle('pageAct');
-            body.classList.toggle('bodyAct');
-            menIt.classList.toggle('navMenAct');
-        }
-      </script>
+
+                nav.classList.toggle('navAct');
+                bod.classList.toggle('bodAct');
+            }
+
+            function pageTransition() {
+                var pageTransition = document.getElementById('pageTransition');
+
+                pageTransition.classList.toggle('pageTransAct');
+            }
+
+            function transHome() {
+                var pageTransition = document.getElementById('pageTransition');
+
+                pageTransition.classList.toggle('pageTransAct');
+                setTimeout(function () {
+                    window.location.href = 'index.html';
+                }, 400);
+            }
+
+            function transAbout() {
+                var pageTransition = document.getElementById('pageTransition');
+
+                pageTransition.classList.toggle('pageTransAct');
+                setTimeout(function () {
+                    window.location.href = 'about.html';
+                }, 400);
+            }
+
+            function transContact() {
+                var pageTransition = document.getElementById('pageTransition');
+
+                pageTransition.classList.toggle('pageTransAct');
+                setTimeout(function () {
+                    window.location.href = 'contact.html';
+                }, 400);
+            }
+
+            function transNotes() {
+                var pageTransition = document.getElementById('pageTransition');
+
+                pageTransition.classList.toggle('pageTransAct');
+                setTimeout(function () {
+                    window.location.href = 'notes.html';
+                }, 400);
+            }
+        </script>
 </body>
+
 </html>
